[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/UI/UiTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Loadout/Loadout.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/Loadout/OptionBoxManager.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[node name="Loadout" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" parent="." index="0"]
text = "Loadout"

[node name="OptionBoxManager" type="VBoxContainer" parent="." index="2"]
margin_left = 8.0
margin_top = 29.0
margin_right = 125.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaitEquipped" type="Label" parent="OptionBoxManager" index="0"]
margin_right = 120.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "  Bait Equipped"

[node name="QtyOfBait" type="Label" parent="OptionBoxManager" index="1"]
margin_top = 12.0
margin_right = 120.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "  Qty:"

[node name="BaitOptionButton" type="OptionButton" parent="OptionBoxManager" index="2"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )

[node name="BaitDescription" type="Label" parent="OptionBoxManager" index="3"]
margin_top = 46.0
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "
"
autowrap = true

[node name="RodEquipped" type="Label" parent="OptionBoxManager" index="4"]
margin_top = 84.0
margin_right = 120.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "  Rod Equipped"

[node name="RodOptionButton" type="OptionButton" parent="OptionBoxManager" index="5"]
margin_top = 96.0
margin_right = 120.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )

[node name="RodDescription" type="Label" parent="OptionBoxManager" index="6"]
margin_top = 118.0
margin_right = 120.0
margin_bottom = 152.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "
"
autowrap = true

[node name="TryEquippedRod" type="Button" parent="." index="3"]
margin_left = 7.0
margin_top = 194.0
margin_right = 73.0
margin_bottom = 221.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = SubResource( 3 )
text = "Try Equipped Rod"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipPerks" type="Button" parent="." index="4"]
margin_left = 82.0
margin_top = 194.0
margin_right = 147.0
margin_bottom = 221.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = SubResource( 3 )
text = "Equip Perks"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GoBackToMenuButton" to="." method="_on_GoBackToMenuButton_pressed"]
[connection signal="item_selected" from="OptionBoxManager/BaitOptionButton" to="OptionBoxManager" method="_on_BaitOptionButton_item_selected"]
[connection signal="item_selected" from="OptionBoxManager/RodOptionButton" to="OptionBoxManager" method="_on_RodOptionButton_item_selected"]
[connection signal="pressed" from="TryEquippedRod" to="." method="_on_TryEquippedRod_pressed"]
[connection signal="pressed" from="EquipPerks" to="." method="_on_EquipPerks_pressed"]
